# caveclaw

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  pyproject.toml
.github/workflows/: ci-cd.yml  deploy.yml  pr-check.yml
agents/claw/: SOUL.md
agents/grocer/: SOUL.md  TOOLS.md
agents/shadow/: SOUL.md  TOOLS.md
caveclaw/: __init__.py  agent.py  bus.py  cli.py  config.py  db.py  memory.py  session.py
caveclaw/channels/: discord.py
tests/: conftest.py  test_agent.py  test_bus.py  test_config.py  test_db.py  test_discord.py  test_memory.py  test_session.py  test_templates.py
