[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "caveclaw"
version = "0.1.0"
description = "An AI agent that lives in your cave and gets things done through chat."
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.1.40",
    "typer>=0.24.1",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
    "prompt-toolkit>=3.0.52",
    "discord.py>=2.6.4",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
]

[project.scripts]
caveclaw = "caveclaw.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["caveclaw"]

[tool.coverage.report]
show_missing = true
skip_empty = true
